[package]
name = "kapitalist-cli"
version = "0.1.0"
authors = ["The kapitalist-app developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kapitalist-app/cli"

edition = "2018"

[profile.release]
lto = true

[dependencies]
kapitalist_types = "0.1"

# For getting platform independent config folders
directories = "1.0"
# For parsing toml config files
toml = "0.4"

# For securely getting a password from the TTY
rpassword = "2.0"

# For argument parsing
clap = { version = "2.32", default-features = false, features = ["vec_map"] }
# For structured loggin
slog = { version = "2.3", features = ["release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-stdlog = { version = "3.0", default-features = false }
slog-term = { version = "2.4", default-features = false }

# For serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"

# For performing requests to the backend
reqwest = "0.9"
